--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </style>
 </head>
 <body>
-    <h1>Flexer Developers</h1>
+    <h1>Zynex Developers</h1>
     <div class="dots">
         <div class="dot red"></div>
         <div class="dot yellow"></div>
