--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             height: 100vh;
             margin: 0;
             font-family: 'Anuphan', sans-serif;
-            background-color: #f5f5f5;
+            background-color: #000;
+            color: #fff;
         }
         h1 {
             font-weight: 600;
@@ -36,7 +37,8 @@
     </style>
 </head>
 <body>
-    <h1>Zynex Developers</h1>
+    <h1 style="font-weight: 800;">Zynex Developers</h1>
+    <p style="font-size: 0.8rem; margin-top: 5px;">discord.gg/E6ynK4r7WA</p>
     <div class="dots">
         <div class="dot red"></div>
         <div class="dot yellow"></div>
